# permastate-rust

./: README.md
cloudstate/: Cargo.toml  build.rs  fetch-cloudstate-pb.sh
cloudstate/proto/cloudstate/: entity.proto
cloudstate/proto/protocol/cloudstate/: event_sourced.proto  function.proto
cloudstate/src/: lib.rs  main.rs  protocol.rs  serveless.rs
cloudstate/src/protos/: shoppingcart.rs
rust-support/cloudstate/: Cargo.toml  Dockerfile  build.rs
rust-support/cloudstate/config/: log4rs.yml
rust-support/cloudstate/proto/cloudstate/: crdt.proto  entity_key.proto
rust-support/cloudstate/proto/example/shoppingcart/: shoppingcart.proto
rust-support/cloudstate/proto/google/api/: annotations.proto
rust-support/cloudstate/proto/google/proto/: any.proto
rust-support/cloudstate/src/: cloudstate.rs  handlers.rs  lib.rs  main.rs  protocol.rs  serveless.rs
rust-support/cloudstate/src/protos/: domain.rs
tck/src/it/resources/: application.bkp  application.conf
