[package]
name = "cloudstate"
version = "0.0.1"
description = "Support for implementing CloudState functions"
homepage = "https://cloudstate.io/"
documentation = "https://cloudstate.io/docs/"
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
