[package]
name = "cloudstate"
version = "0.0.1"
description = "Support for implementing CloudState functions"
keywords = [
    "serverless",
    "cloudstate",
    "event-sourcing",
    "crdt"
  ]
homepage = "https://cloudstate.io/"
documentation = "https://cloudstate.io/docs/"
authors = ["Adriano Santos <sleipnir@bsd.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log   = "0.4.8"
tonic = "0.1.0-alpha.2"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
